# Multi-Agent-Customer-Support-Ecommerce

./: pyproject.toml
app/: config.py  database.py  main.py
app/agents/: query_analyzer.py  response_formatter.py  sql_generator.py
app/auth/: auth_handler.py
app/models/: models.py
app/schemas/: schemas.py
