[tool.poetry]
name = "multiagent-ecommerce"
version = "0.1.0"
description = ""
authors = ["kavyal2 <kavya9140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
langgraph = "^0.2.61"
pydantic = {extras = ["email"], version = "^2.10.4"}
instructor = "^1.7.2"
groq = "^0.13.1"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.1"
langchain-groq = "^0.2.3"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
